# pydemo

./: .env.example  .gitignore  README.md  config.dev.yml  pyproject.toml
src/demo/: main.py  state.py  ui.py  workflow.py
src/demo/agents/: chat.py  compliance.py  grammar.py  logic.py  vision.py
src/demo/api/: dependencies.py
src/demo/api/routers/: review.py  system.py
src/demo/config/: __init__.py  base.py  factory.py  loader.py  logger.py  models.py
src/demo/llm/: embedding.py  factory.py
src/demo/rag/: core.py  engine.py  ingestion.py  pipeline.py  reranker.py  temp_engine.py
src/demo/rag/components/: embedding.py  reranker.py  sparse.py
src/demo/schemas/: review.py
src/demo/utils/: http.py  http_client.py
tests/: test_api.py  test_config.py
